# robot-wars

./: .gitignore  Makefile  pyproject.toml
robot_wars/: settings.py
robot_wars/core/: main.py
robot_wars/core/classes/: event.py
robot_wars/core/engine/: game.py
robot_wars/core/rendering/: renderer.py
robot_wars/core/robot/: robot.py  robot_factory.py
robot_wars/robots/: simple_killer.py
robot_wars/scripts/: run.py
test/: conftest.py  test_robot_factory.py
test/data/robots/: simple_robot.py
