[tool.poetry]
name = "robot-wars"
version = "0.1.0"
description = ""
authors = ["Kieran Lavelle <kmplavelle@gmail.com>"]

[tool.poetry.scripts]
run = "robot_wars.scripts.run:run"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
structlog = "^22.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
